--- a/constructor/src/main/res/layout/spinner_rows.xml
+++ b/constructor/src/main/res/layout/spinner_rows.xml
@@ -1,51 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!--<ImageView-->
-        <!--android:id="@+id/icon"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:src="@drawable/im0" />-->
-
-
-    <!--<TextView-->
-        <!--android:id="@+id/spinner"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content" />-->
-
-
-    <!--<ImageView-->
-        <!--android:id="@+id/image"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--/>-->
 
     <ImageView
         android:id="@+id/image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
-    <!--<TextView-->
-        <!--android:layout_toRightOf="@+id/image"-->
-        <!--android:padding="3dip"-->
-        <!--android:layout_marginTop="2dip"-->
+    <TextView
+        android:layout_toRightOf ="@id/image"
+        android:padding="@dimen/activity_horizontal_margin"
 
-        <!--android:textStyle="bold"-->
-        <!--android:id="@+id/company"-->
-        <!--android:layout_marginLeft="5dip"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"/>-->
-    <!--<TextView-->
-        <!--android:layout_toRightOf="@+id/image"-->
-        <!--android:padding="2dip"-->
-
-        <!--android:layout_marginLeft="5dip"-->
-        <!--android:id="@+id/sub"-->
-        <!--android:layout_below="@+id/company"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"/>-->
+        android:textStyle="bold"
+        android:id="@+id/company"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
